@@ -19,6 +19,7 @@ ENH: Active Record now supports implicitly declared related properties (Qiang)
 ENH: Active Record now supports query criteria for implicitly declared related properties (Qiang)
 ENH: TDataFieldAccessor now supports chained property access without getters. (Qiang)
 ENH: TParameterModule added caching support (Qiang)
+ENH: Added TAuthManager.switchUser() (Qiang)
 NEW: Added TDbLogRoute (Qiang)
 NEW: Added TDataRenderer and TItemDataRenderer (Qiang)
 NEW: Ticket#544 - Added TXCache (Wei)
